# BEAD-experimental

./: .gitignore  README.md  STATISTICAL_PLOTTING_README.md  anneal_instr.md  debug_efp_compute.py  debug_efp_count.py  debug_efp_mapping.py  generate_statistical_plots.py  investigate_graph_count.py  pyproject.toml  roc_output.txt  run_roc_plots.sh  test_efp_final_mapping.py  test_efp_helper_functions.py  test_efp_simple.py  test_efp_utils.py  test_energyflow_efp.py
.github/workflows/: docs.yaml  tests.yml
bead/: bead.py  test_efp_core_integration.py  test_efp_integration.py
bead/src/models/: flows.py  layers.py  models.py  transformer_utils.py
bead/src/trainers/: inference.py  training.py
bead/src/utils/: __init__.py  annealing.py  conversion.py  data_processing.py  diagnostics.py  efp_integration.py  efp_utils.py  ggl.py  helper.py  loss.py  normalization.py  ntxent_utils.py  plotting.py  statistical_plotting.py
bead/workspaces/dqm/test/config/: test_config.py
docs/: conf.py  index.rst
paper_plots/: STATISTICAL_PLOTTING_README.md  new_roc_output.txt  run_roc_plots.sh
paper_plots/tests/: __init__.py
paper_plots/tests/unit/: test_config_creation.py  test_efp_embedding.py  test_loss.py  test_plotting.py
shell_scripts/: run_bead.slurm  run_bead_a100.slurm  run_bead_v100.slurm
tests/: run_tests.py  test_efp_standalone.py  test_efp_training_integration.py  test_energyflow_efp.py
tests/unit/: test_annealing.py  test_config_creation.py  test_efp_integration.py  test_efp_model_integration.py  test_gpu_plotting.py  test_helper.py  test_loss.py  test_ntxent_helper.py  test_ntxent_loss.py  test_ntxent_utils.py  test_plotting.py
