[project]
name = "bead"
version = "0.14.2"
description = "Background Enrichment based Anomaly Detection in HEP data"
authors = [{ name = "Pratik Jawahar" }]
requires-python = ">=3.10, <3.13"
readme = "README.md"

dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=1.24.0,<2.2.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "art (>=6.4,<7.0)",
    "loky (>=3.4.1,<4.0.0)",
    "h5py (>=3.12.1,<4.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "dask (>=2025.2.0,<2026.0.0)",
    "numba (>=0.61.0,<0.62.0)",
    "trimap>=1.1.4",
    "setuptools>=75.8.0",
]

[project.optional-dependencies]
viz = ["umap-learn>=0.5.5"]
gpu = [
    "cuml>=0.6.1.post1", # Using exact version that's available
    "umap-learn>=0.5.5",
    "cudf>=0.6.1.post1", # Using exact version that's compatible with cuml
]
test = ["pytest>=8.0.0,<9", "pytest-cov>=5.0.0,<6", "pytest-xdist>=3.5.0,<4"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[project.scripts]
bead = "bead.bead:main"

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "pylint>=3.3.4,<4",
    "wrapt>=1.17.2,<2",
    "sphinx>=8.1.3,<9",
    "sphinx-rtd-theme>=3.0.2,<4",
    "pytest>=8.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.13",
]

test = ["pytest>=8.0.0,<9", "pytest-cov>=5.0.0,<6", "pytest-xdist>=3.5.0,<4"]

[tool.ruff.lint]
extend-select = ["B"]

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=bead --cov-report=xml --cov-report=term"

[tool.hatch.build.targets.sdist]
include = ["./bead", "README.md", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
#include = ["./bead"]

[tool.hatch.build.targets.wheel.sources]
"bead" = "bead"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
